# Controllers_Analysers

./: AGENTS.md  LICENSE  README.md  README.zh-CN.md  ca_app.lnk  ca_app_Y9000P.lnk  create_ca_app_shortcut.bat  create_ca_app_shortcut_v4.bat  pyproject.toml  requirements.txt  run_ca_app.py  setup_ca_app.py  temp.txt
docs/: architecture.md  calibration_models.md  hardware_safety.md
docs/en/: afm-kpfm-analysis.md  afm-kpfm-controller.md  aps-dwf-spv.md  architecture.md  calibration-and-functions.md  developer-guide.md  file-formats.md  hardware-safety.md  index.md  maintenance-checklist.md  module-map.md  project-overview.md  raman-electrical.md  raman-workflows.md  state-restore.md  testing.md  tpc-control.md  versioning.md  workspace-guide.md
docs/zh-CN/: afm-kpfm-analysis.md  afm-kpfm-controller.md  aps-dwf-spv.md  architecture.md  calibration-and-functions.md  developer-guide.md  file-formats.md  hardware-safety.md  index.md  maintenance-checklist.md  module-map.md  project-overview.md  (+7 more)
notebooks/: aps_preview_results_extracted2.ipynb
tests/: test_afm_kpfm_analysis.py  test_aps_analysis.py  test_controller_com_ports.py  test_raman_baseline.py  test_raman_baseline_gui.py  test_raman_baseline_logging.py  test_raman_converting.py  test_raman_electrical.py  test_raman_insitu_echem.py  test_raman_mapping.py  test_setup_ca_app.py  test_shortcut_setup.py  test_tpc_laser_diode.py  test_usage_logger.py  test_workspace_state.py
usage_logs/: usage_20260607.jsonl  usage_20260608.jsonl  usage_20260701.jsonl
wheelhouse/: install.txt  renishawWiRE-0.1.16-py3-none-any.whl
(+39 files in other folders)
