[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ca-app"
version = "16.22.260701.0042"
description = "wxPython GUI for experiment control and analysis workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "wxPython==4.2.5",
  "pyserial==3.5",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "Pillow>=10",
  "renishawWiRE==0.1.16",
]

[project.scripts]
ca-app = "ca_app.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ca_app = ["resources/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]




